--- a/public/page1.html
+++ b/public/page1.html
@@ -286,9 +286,9 @@
         </div>
         <div class="col-md-3 d-flex justify-content-center">
             <div class="nav-section">
-                <a href="#">
+                <a href="progress.html">
                     <i class="fas fa-plus"></i>
-                    <h5>Additional Section</h5>
+                    <h5>update Progress</h5>
                 </a>
             </div>
         </div>
